# morphological_tagger_for_farsi

./: .gitignore  README.md  annotation_format_validation.py  conv_to_annotation_format.py  corpus_to_json.py  easy_demo.sh  experiment_cov_amb.sh  from_corpus_to_xml.sh  generate_xml.py  lex_to_json.py  load_lex_file.py  patch_converting_table.py  split_using_perlex_amlgm.py  table_json  table_to_json.py  tag_and_check_performance.py  tag_table_information.py  taged.json  test  test_file.input  test_file.input.annotation  test_morph.py  xml_to_annotation_format.py
add_new_lemma/: ADJ_inflection.py  N_inflection.py  V_inflection.py
conv_table_working_dir/: README.md  cutoff_entry.py  manual_editing.tsv  need_manual_work.tsv  sort_list.py  (+5 more)
trunk/: 6741af2  6741ilex0  6741s.dat-journal  ADJ.ilex  ADV.ilex  ADV.lex  ADV.lex.fixed  AR.lex  AR.lex.fixed  CLASS.lex  CLASS.lex.fixed  CON.ilex  CON.lex  CON.lex.fixed  DELM.lex  DET.ilex  DET.lex  DET.lex.fixed  INSTALL  INT.ilex  INT.lex  INT.lex.fixed  MS.ilex  MS.lex  Makefile  Makefile.am  Makefile.in  N.ilex  NP.ilex  NP.lex  NP.lex.fixed  OH.ilex  OH.lex  OH.lex.fixed  P.ilex  P.lex  P.lex.fixed  PRO.ilex  PRO.lex  PRO.lex.fixed  (+46 more)
trunk/.svn/: entries
trunk/.svn/text-base/: ADJ.ilex.svn-base  AR.ilex.svn-base  CLASS.ilex.svn-base  CON.ilex.svn-base  N.ilex.svn-base  P.mf.svn-base  PRO.ilex.svn-base  PRO.mf.svn-base  alexina-makefile.svn-base  countries.ilex.svn-base  countries.mf.svn-base  person_names.ilex.svn-base
trunk/autom4te.cache/: output.1  requests  traces.0  traces.1
trunk/validation_databases/.svn/: entries
(+128 files in other folders)
